# OPC_server

./: .gitignore  OPC_Server.sln  README.md  opc.json  test_opc.json  Объекты.txt
OPC_Server/: CMakeLists.txt  Makefile  OPC_Server.vcxproj  OPC_Server.vcxproj.filters  crc.cpp  crc.h  main.cpp  main.h  opc_json.json  open62541.c  open62541.h  poll_optimize.cpp  poll_optimize.h  rs485.cpp  rs485.h  rs485_device_ioctl.h  serialize.cpp  serialize.h  tcp.cpp  tcp.h  test_json2.json  utils.cpp  utils.h
OPC_Server/open62541/: client_config.h
OPC_Server/open62541/plugin/: log.h
OPC_Server/rapidjson/: document.h
OPC_Server_Test/: OPC_Server_Test.vcxproj  opc.json  test_main.cpp
OPC_Server_Test/readme/Измерение покрытия кода lcov/: Измерение покрытия кода тестами или Test Coverage - MIPT Computer Science 1.html
